looks better without hr

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 
@@ -18,7 +18,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <div class="mySite">
-        <div class="navigation">
+        <div class="name">Jason Ji</div>
+        <!-- <div class="navigation">
             <ul>
                 <li>home</li>
                 <li>resume</li>
@@ -26,7 +27,51 @@
                 <li>about</li>
                 <li>contact</li>
             </ul>
+        </div> -->
+
+        <div class="segment">
+            <h1>Hi I'm Jason.</h1>
+            <p>I'm like a web developer and a bunch of other titles. Call me what you like! But I think Jason's the
+                easiest.</p>
         </div>
+        <!-- <hr> -->
+        <div class="segment">
+            <h1>I'm from Oceanside, California.</h1>
+            <p>But I've lived in a lot of places across the United States. Here's just to name a few.</p>
+            <ul>
+
+                <li>Monterey, California</li>
+                <li>San Angelo, Texas</li>
+                <li>Baltimore, Maryland</li>
+            </ul>
+        </div>
+        <!-- <hr> -->
+        <div class="segment">
+            <h1>I've been living in Norway for the past 4 years.</h1>
+            <p>Two years in Trondheim</p>
+            <p>And two years in Gjøvik</p>
+        </div>
+        <hr>
+
+
+        <div class="segment">
+            <h1>I'm a web development student.</h1>
+            <p>I'm interested in web technologies such as angular, react, vue just to name a few.</p>
+        </div>
+
+
+        <div class="segment">
+            <h1>I love surfing!</h1>
+            <p>I'm like actually a beginner/intermediate surfer, so I'm not super good. I have good days and some not so
+                good days. I've been lucky enough to surf in seven different countries across 4 different continents</p>
+        </div>
+
+        <div class="segment">
+            <h1>I enjoy learning about new things, having conversations, good food, and hanging out with family.</h1>
+        </div>
+
+
+
     </div>
     <script src="" async defer></script>
 </body>
