mySite wrap no good

--- a/index.html
+++ b/index.html
@@ -29,23 +29,31 @@
             </ul>
         </div> -->
 
-        <div class="segment">
-            <h1>Hi I'm Jason.</h1>
-            <p>I'm like a web developer and a bunch of other titles. Call me what you like! But I think Jason's the
-                easiest.</p>
-        </div>
-        <!-- <hr> -->
-        <div class="segment">
-            <h1>I'm from Oceanside, California.</h1>
-            <p>But I've lived in a lot of places across the United States. Here's just to name a few.</p>
-            <ul>
 
-                <li>Monterey, California</li>
-                <li>San Angelo, Texas</li>
-                <li>Baltimore, Maryland</li>
-            </ul>
-        </div>
-        <!-- <hr> -->
+        <!-- intro header -->
+        <section id="intro">
+            <div class="segment">
+                <h1>Hi I'm Jason.</h1>
+                <p>I'm like a web developer and a bunch of other titles. Call me what you like! But I think Jason's the
+                    easiest.</p>
+            </div>
+            <!-- <hr> -->
+        </section>
+
+        <section id="whereimfrom">
+            <!-- Where I'm from -->
+                <h1>I'm from Oceanside, California.</h1>
+                <p>But I've lived in a lot of places across the United States. Here's just to name a few.</p>
+                <ul>
+                    <li>Monterey, California</li>
+                    <li>San Angelo, Texas</li>
+                    <li>Baltimore, Maryland</li>
+                </ul>
+            <!-- <hr> -->
+        </section>
+
+
+        <!-- Where I'm Now Living -->
         <div class="segment">
             <h1>I've been living in Norway for the past 4 years.</h1>
             <p>Two years in Trondheim</p>
@@ -54,20 +62,24 @@
         <hr>
 
 
+        <!-- What I do -->
         <div class="segment">
             <h1>I'm a web development student.</h1>
             <p>I'm interested in web technologies such as angular, react, vue just to name a few.</p>
         </div>
 
 
+        <!-- My main Hobby -->
         <div class="segment">
             <h1>I love surfing!</h1>
             <p>I'm like actually a beginner/intermediate surfer, so I'm not super good. I have good days and some not so
                 good days. I've been lucky enough to surf in seven different countries across 4 different continents</p>
         </div>
 
+
+        <!-- Call To Action -->
         <div class="segment">
-            <h1>I enjoy learning about new things, having conversations, good food, and hanging out with family.</h1>
+            <h1>I enjoy learning about new things, and talking to new people, why not have a chat!</h1>
         </div>
 
 
