--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <!-- intro header -->
         <section id="intro">
             <div class="segment">
-                <h1>Hi I'm Jason.</h1>
-                <p>I'm like a web developer and a bunch of other titles. Call me what you like! But I think Jason's the
+                <h1>Hi I'm Jason Ji.</h1>
+                <p>I'm a web developer and a bunch of other titles. Call me what you like! But I think Jason's the
                     easiest.</p>
             </div>
             <!-- <hr> -->
@@ -46,8 +46,11 @@
                 <p>But I've lived in a lot of places across the United States. Here's just to name a few.</p>
                 <ul>
                     <li>Monterey, California</li>
+                    <img src="https://images.unsplash.com/photo-1576693145427-b2a00b1cc62f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" alt="Monterey, California">
                     <li>San Angelo, Texas</li>
+                    <img src="https://images.unsplash.com/photo-1599669173253-6ef65e7e42d4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" alt="Ceramic Sheep with Painted Cactus Rump">
                     <li>Baltimore, Maryland</li>
+                    <img src="https://images.unsplash.com/photo-1563379965688-8b6fda9b8ca4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" alt="Jellyfish">
                 </ul>
             <!-- <hr> -->
         </section>
@@ -59,7 +62,7 @@
             <p>Two years in Trondheim</p>
             <p>And two years in Gjøvik</p>
         </div>
-        <hr>
+        <!-- <hr> -->
 
 
         <!-- What I do -->
