--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div class="mySite">
-        <div class="name">Jason Ji</div>
-        <!-- <div class="navigation">
+
+        <div class="name"><a href="index.html">Jason Ji</a> </div>
+        <div class="navigation">
             <ul>
-                <li>home</li>
-                <li>resume</li>
-                <li>projects</li>
-                <li>about</li>
-                <li>contact</li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="resume.html">resume</a></li>
+                <li><a href="projects.html">projects</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
-        </div> -->
+        </div>
 
 
         <!-- intro header -->
@@ -87,7 +87,7 @@
 
 
 
-    </div>
+
     <script src="" async defer></script>
 </body>
 
