--- a/index.html
+++ b/index.html
@@ -18,72 +18,73 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="name"><a href="index.html">Jason Ji</a> </div>
-        <div class="navigation">
-            <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="resume.html">resume</a></li>
-                <li><a href="projects.html">projects</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-        </div>
+    <div class="name"><a href="index.html">Jason Ji</a> </div>
+    <div class="navigation">
+        <a href="index.html">home</a>
+        <a href="resume.html">resume</a>
+        <a href="projects.html">projects</a>
+        <a href="about.html">about</a>
+        <a href="contact.html">contact</a>
+    </div>
 
 
-        <!-- intro header -->
-        <section id="intro">
-            <div class="segment">
-                <h1>Hi I'm Jason Ji.</h1>
-                <p>I'm a web developer and a bunch of other titles. Call me what you like! But I think Jason's the
-                    easiest.</p>
-            </div>
-            <!-- <hr> -->
-        </section>
-
-        <section id="whereimfrom">
-            <!-- Where I'm from -->
-                <h1>I'm from Oceanside, California.</h1>
-                <p>But I've lived in a lot of places across the United States. Here's just to name a few.</p>
-                <ul>
-                    <li>Monterey, California</li>
-                    <img src="https://images.unsplash.com/photo-1576693145427-b2a00b1cc62f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" alt="Monterey, California">
-                    <li>San Angelo, Texas</li>
-                    <img src="https://images.unsplash.com/photo-1599669173253-6ef65e7e42d4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" alt="Ceramic Sheep with Painted Cactus Rump">
-                    <li>Baltimore, Maryland</li>
-                    <img src="https://images.unsplash.com/photo-1563379965688-8b6fda9b8ca4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80" alt="Jellyfish">
-                </ul>
-            <!-- <hr> -->
-        </section>
-
-
-        <!-- Where I'm Now Living -->
+    <!-- intro header -->
+    <section id="intro">
         <div class="segment">
-            <h1>I've been living in Norway for the past 4 years.</h1>
-            <p>Two years in Trondheim</p>
-            <p>And two years in Gjøvik</p>
+            <h1>Hi I'm Jason Ji.</h1>
+            <p>I'm a web developer and a bunch of other titles. Call me what you like! But I think Jason's the
+                easiest.</p>
         </div>
         <!-- <hr> -->
+    </section>
+
+    <section id="whereimfrom">
+        <!-- Where I'm from -->
+        <h1>I'm from Oceanside, California.</h1>
+        <p>But I've lived in a lot of places across the United States. Here's just to name a few.</p>
+        <ul>
+            <li>Monterey, California</li>
+            <img src="https://images.unsplash.com/photo-1576693145427-b2a00b1cc62f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80"
+                alt="Monterey, California">
+            <li>San Angelo, Texas</li>
+            <img src="https://images.unsplash.com/photo-1599669173253-6ef65e7e42d4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80"
+                alt="Ceramic Sheep with Painted Cactus Rump">
+            <li>Baltimore, Maryland</li>
+            <img src="https://images.unsplash.com/photo-1563379965688-8b6fda9b8ca4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80"
+                alt="Jellyfish">
+        </ul>
+        <!-- <hr> -->
+    </section>
 
 
-        <!-- What I do -->
-        <div class="segment">
-            <h1>I'm a web development student.</h1>
-            <p>I'm interested in web technologies such as angular, react, vue just to name a few.</p>
-        </div>
+    <!-- Where I'm Now Living -->
+    <div class="segment">
+        <h1>I've been living in Norway for the past 4 years.</h1>
+        <p>Two years in Trondheim</p>
+        <p>And two years in Gjøvik</p>
+    </div>
+    <!-- <hr> -->
 
 
-        <!-- My main Hobby -->
-        <div class="segment">
-            <h1>I love surfing!</h1>
-            <p>I'm like actually a beginner/intermediate surfer, so I'm not super good. I have good days and some not so
-                good days. I've been lucky enough to surf in seven different countries across 4 different continents</p>
-        </div>
+    <!-- What I do -->
+    <div class="segment">
+        <h1>I'm a web development student.</h1>
+        <p>I'm interested in web technologies such as angular, react, vue just to name a few.</p>
+    </div>
 
 
-        <!-- Call To Action -->
-        <div class="segment">
-            <h1>I enjoy learning about new things, and talking to new people, why not have a chat!</h1>
-        </div>
+    <!-- My main Hobby -->
+    <div class="segment">
+        <h1>I love surfing!</h1>
+        <p>I'm like actually a beginner/intermediate surfer, so I'm not super good. I have good days and some not so
+            good days. I've been lucky enough to surf in seven different countries across 4 different continents</p>
+    </div>
+
+
+    <!-- Call To Action -->
+    <div class="segment">
+        <h1>I enjoy learning about new things, and talking to new people, why not have a chat!</h1>
+    </div>
 
 
 
