added resome content

--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,24 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <h1>Skills</h1>
+        <ul>
+            <li>html</li>
+            <li>css</li>
+            <li>javascript</li>
+            <li>git</li>
+            <li>linux</li>
+            <li>node</li>
+            <li>express</li>
+        </ul>
+        <h1>School and Education</h1>
         
+        <h1>Work Experience</h1>
+
+        <h1>Volunteer Experience</h1>
+
+        <h1>Languages</h1>
+
         <script src="" async defer></script>
     </body>
 </html>
