added some content to resume

--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,11 @@
             <li>express</li>
         </ul>
         <h1>School and Education</h1>
-        
+        <ul>
+            <li>NTNU Bachelor's in Programming</li>
+            <li>DLIFLC</li>
+            <li>Oceanside High School</li>
+        </ul>
         <h1>Work Experience</h1>
 
         <h1>Volunteer Experience</h1>
