changed navigation class to html nav element

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
 
     <div class="name"><a href="index.html">Jason Ji</a></div>
-    <div class="navigation">
+    <nav>
         <a href="index.html">home</a>
         <a href="resume.html">resume</a>
         <a href="portfolio.html">projects</a>
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
-    </div>
+    </nav>
 
 
     <!-- intro header -->
