--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style/style.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./style/style.css">
+</head>
+
+<body>
+    <div class="name"><a href="index.html">Jason Ji</a></div>
+    <nav>
+        <a href="index.html">home</a>
+        <a href="resume.html">resume</a>
+        <a href="portfolio.html">projects</a>
+        <a href="about.html">about</a>
+        <a href="contact.html">contact</a>
+    </nav>
+
+    <script src="" async defer></script>
+</body>
+
 </html>
