--- a/resume.html
+++ b/resume.html
@@ -13,9 +13,15 @@
         <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <div class="name"><a href="index.html">Jason Ji</a></div>
+        <nav>
+            <a href="index.html">home</a>
+            <a href="resume.html">resume</a>
+            <a href="portfolio.html">projects</a>
+            <a href="about.html">about</a>
+            <a href="contact.html">contact</a>
+        </nav>
+        
         <h1>Skills</h1>
         <ul>
             <li>html</li>
