--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- What I do -->
     <div class="segment">
         <h1>I'm a web development student.</h1>
-        <p>I'm interested in web technologies such as angular, react, vue just to name a few.</p>
+        <p>I'm interested in developing web based applications that can contribute meaning in other people's lives.</p>
     </div>
 
 
@@ -95,7 +95,7 @@
     <div class="segment">
         <h1>I love surfing!</h1>
         <p>I'm like actually a beginner/intermediate surfer, so I'm not super good. I have good days and some not so
-            good days. I've been lucky enough to surf in seven different countries across 4 different continents</p>
+            good days. I've been lucky enough to surf in seven different countries across 4 different continents.</p>
     </div>
 
 
