--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style/style.css">
+
+    <style>
+
+    </style>
+
 </head>
 
 <body>
@@ -19,6 +24,15 @@
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
     </nav>
+
+    <form action="post">
+        <label for="name">Your Name or Handle</label>
+        <input type="text" id="name" name="name" placeholder="Joe Dirt or @ilikedirt">
+        <label for="message">Your Message</label>
+        <textarea name="message" id="message" cols="30" rows="10" placeholder="Write something.."></textarea>
+        <input type="submit" value="Send It!">
+    </form>
+
 
     <script src="" async defer></script>
 </body>
