--- a/resume.html
+++ b/resume.html
@@ -6,10 +6,6 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- google fonts with Merriweather weights: 400, 700 -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
@@ -21,11 +17,9 @@
             <a href="about.html">about</a>
             <a href="contact.html">contact</a>
         </nav>
-        
+
         <h1>Skills</h1>
         <ul>
-            <li>html</li>
-            <li>css</li>
             <li>javascript</li>
             <li>git</li>
             <li>linux</li>
@@ -39,11 +33,27 @@
             <li>Oceanside High School</li>
         </ul>
         <h1>Work Experience</h1>
-
+        <ul>
+            <li>Student Assistant</li>
+            <li>Military Analyst</li>
+            <li>Military Trainer</li>
+        </ul>
         <h1>Volunteer Experience</h1>
-
+        <ul>
+            <li>Substitue Teacher</li>
+            <li>Barman</li>
+            <li>General Staff</li>
+            <li>Tech Demo</li>
+            <li>Photographer</li>
+            <li>Security</li>
+        </ul>
         <h1>Languages</h1>
-
+        <ul>
+            <li>English</li>
+            <li>Norwegian</li>
+            <li>Chinese Mandarin</li>
+            <li>Some Spanish</li>
+        </ul>
         <script src="" async defer></script>
     </body>
 </html>
