--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
-    <meta name="description" content="">
+    <meta name="Jason-Ji-Landing-Page" content="Introduction about Jason Ji">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- google fonts with Merriweather weights: 400, 700 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 
@@ -87,8 +83,6 @@
     <div class="segment">
         <h1>I enjoy learning about new things, and talking to new people, <a href="contact.html">why not have a chat!</a></h1>
     </div>
-
-
 
 
     <script src="" async defer></script>
