updated resume formatting

--- a/resume.html
+++ b/resume.html
@@ -18,42 +18,55 @@
             <a href="contact.html">contact</a>
         </nav>
 
-        <h1>Skills</h1>
-        <ul>
-            <li>javascript</li>
-            <li>git</li>
-            <li>linux</li>
-            <li>node</li>
-            <li>express</li>
-        </ul>
-        <h1>School and Education</h1>
-        <ul>
-            <li>NTNU Bachelor's in Programming</li>
-            <li>DLIFLC</li>
-            <li>Oceanside High School</li>
-        </ul>
-        <h1>Work Experience</h1>
-        <ul>
-            <li>Student Assistant</li>
-            <li>Military Analyst</li>
-            <li>Military Trainer</li>
-        </ul>
-        <h1>Volunteer Experience</h1>
-        <ul>
-            <li>Substitue Teacher</li>
-            <li>Barman</li>
-            <li>General Staff</li>
-            <li>Tech Demo</li>
-            <li>Photographer</li>
-            <li>Security</li>
-        </ul>
-        <h1>Languages</h1>
-        <ul>
-            <li>English</li>
-            <li>Norwegian</li>
-            <li>Chinese Mandarin</li>
-            <li>Some Spanish</li>
-        </ul>
+        <div class="resume">
+            <div class="resume-block">
+                <h3>Skills</h3>
+                <ul>
+                    <li>javascript</li>
+                    <li>git</li>
+                    <li>linux</li>
+                    <li>node</li>
+                    <li>express</li>
+                    <li>React.js</li>
+                </ul>
+            </div>
+            <div class="resume-block">
+                <h3>School and Education</h3>
+                <ul>
+                    <li>NTNU Bachelor's in Programming</li>
+                    <li>DLIFLC</li>
+                    <li>Oceanside High School</li>
+                </ul>
+            </div>
+            <div class="resume-block">
+                <h3>Work Experience</h3>
+                <ul>
+                    <li>2019 - Present, International Student Assistant</li>
+                    <li>2010 - 2014, Military Analyst</li>
+                    <li>2010 - 2014, Military Trainer</li>
+                </ul>
+            </div>
+            <div class="resume-block">
+                <h3>Volunteer Experience</h3>
+                <ul>
+                    <li>2019, Substitue Teacher</li>
+                    <li>2018, Barman</li>
+                    <li>2017, General Staff</li>
+                    <li>2017, Tech Demo</li>
+                    <li>2016, Photographer</li>
+                    <li>2016, Security</li>
+                </ul>
+            </div>
+            <div class="resume-block">
+                <h3>Languages</h3>
+                <ul>
+                    <li>English</li>
+                    <li>Norwegian</li>
+                    <li>Mandarin Chinese</li>
+                    <li>Some Spanish</li>
+                </ul>
+            </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
