--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
            <img src="https://images.unsplash.com/photo-1610050027080-ce93a4fa0e8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1974&q=80" alt="snow covered lighthouse">  
         <div class="caption"><p>Two years in Gjøvik</p></div>
         </div>
-        
-
-
     </section>
 
     <!-- What I do -->
@@ -84,6 +81,9 @@
         <h1>I enjoy learning about new things, and talking to new people, <a href="contact.html">why not have a chat!</a></h1>
     </div>
 
+    <footer>
+        <a href="index.html">Back to top</a>
+    </footer>
 
     <script src="" async defer></script>
 </body>
