--- a/index.html
+++ b/index.html
@@ -62,9 +62,20 @@
     </section>
 
     <!-- What I do -->
-    <div class="segment">
+    <div class="webdev">
         <h2>I'm a web development student.</h2>
         <p>I'm interested in developing web based applications that can contribute meaning in other people's lives.</p>
+        <pre style="padding-top: 55px;">
+            bool meaning = false;
+            function CreateMeaning(){
+                meaning = true;
+                return meaning;
+            }
+
+            if (!meaning){
+                CreateMeaning();
+            }
+        </pre>
     </div>
 
 
