--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,30 @@
         <a href="contact.html">contact</a>
     </nav>
 
+
+    <div class="socialmedia">
+        <div class="so-me">
+            <a href="https://www.instagram.com/dsg_musli/">Instagram</a>
+        </div>
+        <div class="so-me">
+            <a href="https://www.facebook.com/">Facebook</a>
+        </div>
+        <div class="so-me">
+            <a href="https://twitter.com/?lang=en">Twitter</a>
+        </div>
+        <div class="so-me">
+            <a href="https://github.com/kjottkake">Github</a>
+        </div>
+        
+    </div>
+
     <form action="post">
         <label for="name">Your Name or Handle</label>
         <input type="text" id="name" name="name" placeholder="Joe Dirt or @ilikedirt">
         <label for="message">Your Message</label>
         <textarea name="message" id="message" cols="30" rows="10" placeholder="Write something.."></textarea>
         <input type="submit" value="Send It!">
-    </form>
+    </form> 
 
 
     <script src="" async defer></script>
