--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
             if (!meaning){
                 CreateMeaning();
+                console.log("..and it was good.")
             }
         </pre>
     </div>
