fixed landing page

--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Contact Jason Ji</title>
+    <meta name="contact-Jason-Ji" content="Jason Ji Contact Page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style/style.css">
-
-    <style>
-
-    </style>
-
 </head>
 
 <body>
