--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Jason Ji</title>
     <meta name="Jason-Ji-Landing-Page" content="Introduction about Jason Ji">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style/style.css">
@@ -32,33 +32,35 @@
     </section>
 
     <section id="whereimfrom">
-        <!-- Where I'm from --> 
+        <!-- Where I'm from -->
         <h2>I'm from Oceanside, California.</h2>
         <p>But I've lived in a lot of places across the United States. Here's just to name a few.</p>
         <ul>
             <li>Monterey, California</li>
             <li>Austin, Texas</li>
             <li>Baltimore, Maryland</li>
-        </ul>     
+        </ul>
     </section>
 
 
 
     <section id="whereimnow">
-    <!-- Where I'm Now Living -->
+        <!-- Where I'm Now Living -->
 
         <h2>I've been living in Norway for the past 4 years.</h2>
         <!-- <p>Two years in Trondheim</p>
         <p>And two years in Gjøvik</p> -->
-        <div class="imageframe">
-            <img src="https://images.unsplash.com/photo-1614417538522-19e59112c261?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80" alt="Colorful buildings along river.">
-        <div class="caption"><p>Two years in Trondheim</p></div>
-        </div>
-        
-        <div class="imageframe">
-           <img src="https://images.unsplash.com/photo-1610050027080-ce93a4fa0e8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1974&q=80" alt="snow covered lighthouse">  
-        <div class="caption"><p>Two years in Gjøvik</p></div>
-        </div>
+        <figure>
+            <img src="https://images.unsplash.com/photo-1614417538522-19e59112c261?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80"
+                alt="Colorful buildings along river.">
+            <figcaption>I lived in Trondheim for two years.</figcaption>
+        </figure>
+
+        <figure>
+            <img src="https://images.unsplash.com/photo-1610050027080-ce93a4fa0e8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1974&q=80"
+                alt="snow covered lighthouse">
+            <figcaption>Not pictured Gjøvik (they only had lillehammer on unsplash)</figcaption>
+        </figure>
     </section>
 
     <!-- What I do -->
@@ -90,7 +92,8 @@
 
     <!-- Call To Action -->
     <div class="segment">
-        <h1>I enjoy learning about new things, and talking to new people, <a href="contact.html">why not have a chat!</a></h1>
+        <h1>I enjoy learning about new things, and talking to new people, <a href="contact.html">why not have a
+                chat!</a></h1>
     </div>
 
     <footer>
