--- a/about.html
+++ b/about.html
@@ -17,7 +17,19 @@
             <a href="about.html">about</a>
             <a href="contact.html">contact</a>
         </nav>
-        
+        <div class="about">
+            <h1 style="padding-bottom: 55px;">How I Went About Making This Project or: How I Learned to Stop Worrying and Love the HTML.</h1>
+            <p>For this particular project, I went about creating a simple html site with five different pages and an assortment of elements.
+                I focused on making the code clean and easy to understand, however I did feel the limitations very early on in terms of formatting the site as we were not permitted to use flexbox or grid css formatting. Formatting images in css is generally a big pain in the butt but it's made even bigger without flexbox and grid.
+            </p>
+            <p>
+                The primary goal of the page was to look simple and easy on the eyes. I was very inspired by the <a href="https://www.economist.com/">economist</a> website.
+            </p>
+            <p>Another goal as you may have noticed is the dark theme which is very popular in current design trends. The dark theme makes the webpage easier on the viewers eyes in low light conditions. Future implementations can include a button which allows the user to switch between night-time and day-time color themes.</p>
+
+            <h2>Semantic Tags</h2>
+            
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
