--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,12 @@
         <div class="so-me">
             <a href="https://github.com/kjottkake">Github</a>
         </div>
-        
+        <div class="so-me">
+            <a href="mailto:jimanproductions@gmail.com">Email</a>
+        </div>
+        <div class="so-me">
+            <a href="tel:867-5309">Call Me</a>
+        </div>
     </div>
 
     <script src="" async defer></script>
