--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Jason's Past Projects</title>
+    <meta name="projects-jason-ji" content="List of Jason's Past Projects">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -20,6 +20,48 @@
         <a href="contact.html">contact</a>
     </nav>
 
+    <div class="projects">
+        <h1>Here are some things I've made in the past.</h1>
+
+        <h2>
+            logopedskh.no
+        </h2>
+        <figure>
+            <a href="http://logopedskh.no/">
+            <img src="./media/logopedskh.png" alt="homepage to logopedskh.no">
+            </a>
+        </figure>
+        <p>
+            This is the website for a small speech pathologist office.
+        </p>
+        <h2>
+            tindog
+        </h2>
+        <figure>
+            <a href="https://kjottkake.github.io/webdev/">
+            <img src="./media/tindog.png" alt="tindog landing page">
+            </a>
+        </figure>
+        <p>
+            This is a html and css project which I learned to create a landing page for a fictional application called Tindog, it's like tinder but for dogs.
+        </p>
+        <h2>
+            folk.ntnu.no/yunj
+        </h2>
+        <figure>
+            <a href="https://folk.ntnu.no/yunj/home/">
+            <img src="./media/folk.png" alt="yunj landing page">
+            </a>
+        </figure>
+        <p>
+            My personal homepage which I created in fall of 2019 but I haven't updated in a while.
+            This was inspired after I saw a badass music video created by a productions company called iconoclast. I was really inspired by their homepage and I wanted something similar.
+        </p>
+    </div>
+
+        <footer>
+            <a href="portfolio.html">Back to top</a>
+        </footer>
     <script src="" async defer></script>
 </body>
 
