removed empty script tags, added titles

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Jason's Resume</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style/style.css">
@@ -19,7 +19,12 @@
         </nav>
 
         <div class="resume">
+            <div class="title">
+                <h1>Resume</h1>
+            </div>
+            
             <div class="resume-block">
+                
                 <h3>Skills</h3>
                 <ul>
                     <li>javascript</li>
@@ -67,6 +72,5 @@
                 </ul>
             </div>
         </div>
-        <script src="" async defer></script>
     </body>
 </html>
