--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Jason Ji About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style/style.css">
@@ -30,6 +30,5 @@
             <h2>Semantic Tags</h2>
             
         </div>
-        <script src="" async defer></script>
     </body>
 </html>
