--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +27,6 @@
             </p>
             <p>Another goal as you may have noticed is the dark theme which is very popular in current design trends. The dark theme makes the webpage easier on the viewers eyes in low light conditions. Future implementations can include a button which allows the user to switch between night-time and day-time color themes.</p>
 
-            <h2>Semantic Tags</h2>
             
         </div>
     </body>
