--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -48,8 +48,6 @@
         <!-- Where I'm Now Living -->
 
         <h2>I've been living in Norway for the past 4 years.</h2>
-        <!-- <p>Two years in Trondheim</p>
-        <p>And two years in Gjøvik</p> -->
         <figure>
             <img src="https://images.unsplash.com/photo-1614417538522-19e59112c261?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80"
                 alt="Colorful buildings along river.">
@@ -87,6 +85,13 @@
         <h2>I love surfing!</h2>
         <p>I'm like actually a beginner/intermediate surfer, so I'm not super good. I have good days and some not so
             good days. I've been lucky enough to surf in seven different countries across 4 different continents.</p>
+        <h3>My other hobbies include but are not limited to:</h3>
+        <ul>
+            <li>Watching travel cooking shows on YouTube.</li>
+            <li>Hanging out with my <a href="https://www.instagram.com/dsg_musli/">dog</a>.</li>
+            <li>Taking long walks on the beach.</li>
+            <li>Artsy stuff.</li>
+        </ul>    
     </div>
 
 
@@ -94,6 +99,11 @@
     <div class="segment">
         <h1>I enjoy learning about new things, and talking to new people, <a href="contact.html">why not have a
                 chat!</a></h1>
+    </div>
+
+    <div class="quote">
+        <q>97% of quotes you read on the internet are made up on the spot.</q>
+        <p>Abraham Lincoln</p>
     </div>
 
     <footer>
